[tool.poetry]
name = "CynthiaSubnet"
version = "0.1.0"
description = "A Bittensor subnet implementation for advanced AI-powered search and discovery"
authors = ["Cynthia Systems <info@cynthiasystems.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
transformers = "^4.46.1"
bittensor = {extras = ["torch"], version = "^8.2.0"}
wandb = "^0.18.5"
loguru = "^0.7.2"
pydantic = "^2.9.2"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
